--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
+            min-height: 100vh;
             background: linear-gradient(to bottom, #3e2723, #5d4037, #a1887f);
             font-family: 'Poppins', sans-serif;
             color: #fff;
             text-align: center;
             padding: 40px;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
+
         .title {
             font-size: 42px;
             font-weight: 600;
